--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/jpg" href="img/favicon.ico"/>
-    <title>Robotron 2000</title>
+    <title>Black Mirror Robot Dog</title>
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,34 +14,33 @@
 </head>
 <body>
     <main>
-        <section class="robotron">
-            <img class="robo" src="img/robotron.png" alt="Robotron" id="robotron">
-            <figcaption class="titulo">ROBOTRON <br>2000</figcaption>
+        <section class="robotdog">
+            <img class="robo" src="img/robot.png" alt="Black Mirror Robot Dog" id="robotdog">
         </section>
 
         <section class="box estatisticas">
             <div class="estatistica">
                 <p class="estatistica-titulo">Força</p>
                 <div class="estatistica-valor">
-                    <p class="estatistica-numero">768</p>
+                    <p class="estatistica-numero" data-estatistica="forca">0</p>
                 </div>
             </div>
             <div class="estatistica">
-                <p class="estatistica-titulo">Poder</p>
+                <p class="estatistica-titulo">Potência</p>
                 <div class="estatistica-valor">
-                    <p class="estatistica-numero">630</p>
+                    <p class="estatistica-numero" data-estatistica="poder">0</p>
                 </div>
             </div>
             <div class="estatistica">
                 <p class="estatistica-titulo">Energia</p>
                 <div class="estatistica-valor">
-                    <p class="estatistica-numero">289</p>
+                    <p class="estatistica-numero" data-estatistica="energia">0</p>
                 </div>
             </div>
             <div class="estatistica">
                 <p class="estatistica-titulo">Velocidade</p>
                 <div class="estatistica-valor">
-                    <p class="estatistica-numero">597</p>
+                    <p class="estatistica-numero" data-estatistica="velocidade">0</p>
                 </div>
             </div>
         </section>
@@ -50,47 +49,47 @@
             <form action="" class="montador">
                 <div class="box montador-conteudo">
                     <div class="peca">
-                        <label for="" class="peca-titulo">Braços</label>
+                        <label for="" class="peca-titulo">Intensidade</label>
                         <div class="controle">
-                            <buttom class="controle-ajuste" data-controle="-">-</buttom>
+                            <buttom class="controle-ajuste" data-controle="-" data-peca="bracos">-</buttom>
                             <input type="text" class="controle-contador" value="00" data-contador>
-                            <buttom class="controle-ajuste" data-controle="+">+</buttom>
+                            <buttom class="controle-ajuste" data-controle="+" data-peca="bracos">+</buttom>
+                        </div>
+                    </div>
+                    <hr class="linha">
+                    <div class="peca">
+                        <label for="" class="peca-titulo">Processamento</label>
+                        <div class="controle">
+                            <buttom class="controle-ajuste" data-controle="-" data-peca="blindagem">-</buttom>
+                            <input type="text" class="controle-contador" value="00" data-contador>
+                            <buttom class="controle-ajuste" data-controle="+" data-peca="blindagem">+</buttom>
                         </div>
                     </div>
                     <hr class="linha">
                     <div class="peca">
                         <label for="" class="peca-titulo">Blindagem</label>
                         <div class="controle">
-                            <buttom class="controle-ajuste" data-controle="-">-</buttom>
+                            <buttom class="controle-ajuste" data-controle="-" data-peca="nucleos">-</buttom>
                             <input type="text" class="controle-contador" value="00" data-contador>
-                            <buttom class="controle-ajuste" data-controle="+">+</buttom>
+                            <buttom class="controle-ajuste" data-controle="+" data-peca="nucleos">+</buttom>
                         </div>
                     </div>
                     <hr class="linha">
                     <div class="peca">
-                        <label for="" class="peca-titulo">Núcleos</label>
+                        <label for="" class="peca-titulo">Agilidade</label>
                         <div class="controle">
-                            <buttom class="controle-ajuste" data-controle="-">-</buttom>
+                            <buttom class="controle-ajuste" data-controle="-" data-peca="pernas">-</buttom>
                             <input type="text" class="controle-contador" value="00" data-contador>
-                            <buttom class="controle-ajuste" data-controle="+">+</buttom>
+                            <buttom class="controle-ajuste" data-controle="+" data-peca="pernas">+</buttom>
                         </div>
                     </div>
                     <hr class="linha">
                     <div class="peca">
-                        <label for="" class="peca-titulo">Pernas</label>
+                        <label for="" class="peca-titulo">Resistência</label>
                         <div class="controle">
-                            <buttom class="controle-ajuste" data-controle="-">-</buttom>
+                            <buttom class="controle-ajuste" data-controle="-" data-peca="foguetes">-</buttom>
                             <input type="text" class="controle-contador" value="00" data-contador>
-                            <buttom class="controle-ajuste" data-controle="+">+</buttom>
-                        </div>
-                    </div>
-                    <hr class="linha">
-                    <div class="peca">
-                        <label for="" class="peca-titulo">Foguetes</label>
-                        <div class="controle">
-                            <buttom class="controle-ajuste" data-controle="-">-</buttom>
-                            <input type="text" class="controle-contador" value="00" data-contador>
-                            <buttom class="controle-ajuste" data-controle="+">+</buttom>
+                            <buttom class="controle-ajuste" data-controle="+" data-peca="foguetes">+</buttom>
                         </div>
                     </div>
                 </div>
