--- a/index.html
+++ b/index.html
@@ -51,49 +51,49 @@
                     <div class="peca">
                         <label for="" class="peca-titulo">Intensidade</label>
                         <div class="controle">
-                            <buttom class="controle-ajuste" data-controle="-" data-peca="bracos">-</buttom>
-                            <input type="text" class="controle-contador" value="00" data-contador>
-                            <buttom class="controle-ajuste" data-controle="+" data-peca="bracos">+</buttom>
+                            <buttom class="controle-ajuste" data-controle="-" data-botao_operacao="intensidade">-</buttom>
+                            <input type="text" class="controle-contador" value="0" data-contador>
+                            <buttom class="controle-ajuste" data-controle="+" data-botao_operacao="intensidade">+</buttom>
                         </div>
                     </div>
                     <hr class="linha">
                     <div class="peca">
                         <label for="" class="peca-titulo">Processamento</label>
                         <div class="controle">
-                            <buttom class="controle-ajuste" data-controle="-" data-peca="blindagem">-</buttom>
-                            <input type="text" class="controle-contador" value="00" data-contador>
-                            <buttom class="controle-ajuste" data-controle="+" data-peca="blindagem">+</buttom>
+                            <buttom class="controle-ajuste" data-controle="-" data-botao_operacao="processamento">-</buttom>
+                            <input type="text" class="controle-contador" value="0" data-contador>
+                            <buttom class="controle-ajuste" data-controle="+" data-botao_operacao="processamento">+</buttom>
                         </div>
                     </div>
                     <hr class="linha">
                     <div class="peca">
                         <label for="" class="peca-titulo">Blindagem</label>
                         <div class="controle">
-                            <buttom class="controle-ajuste" data-controle="-" data-peca="nucleos">-</buttom>
-                            <input type="text" class="controle-contador" value="00" data-contador>
-                            <buttom class="controle-ajuste" data-controle="+" data-peca="nucleos">+</buttom>
+                            <buttom class="controle-ajuste" data-controle="-" data-botao_operacao="blindagem">-</buttom>
+                            <input type="text" class="controle-contador" value="0" data-contador>
+                            <buttom class="controle-ajuste" data-controle="+" data-botao_operacao="blindagem">+</buttom>
                         </div>
                     </div>
                     <hr class="linha">
                     <div class="peca">
                         <label for="" class="peca-titulo">Agilidade</label>
                         <div class="controle">
-                            <buttom class="controle-ajuste" data-controle="-" data-peca="pernas">-</buttom>
-                            <input type="text" class="controle-contador" value="00" data-contador>
-                            <buttom class="controle-ajuste" data-controle="+" data-peca="pernas">+</buttom>
+                            <buttom class="controle-ajuste" data-controle="-" data-botao_operacao="agilidade">-</buttom>
+                            <input type="text" class="controle-contador" value="0" data-contador>
+                            <buttom class="controle-ajuste" data-controle="+" data-botao_operacao="agilidade">+</buttom>
                         </div>
                     </div>
                     <hr class="linha">
                     <div class="peca">
                         <label for="" class="peca-titulo">Resistência</label>
                         <div class="controle">
-                            <buttom class="controle-ajuste" data-controle="-" data-peca="foguetes">-</buttom>
-                            <input type="text" class="controle-contador" value="00" data-contador>
-                            <buttom class="controle-ajuste" data-controle="+" data-peca="foguetes">+</buttom>
+                            <buttom class="controle-ajuste" data-controle="-" data-botao_operacao="resistencia">-</buttom>
+                            <input type="text" class="controle-contador" value="0" data-contador>
+                            <buttom class="controle-ajuste" data-controle="+" data-botao_operacao="resistencia">+</buttom>
                         </div>
                     </div>
                 </div>
-                <input type="submit" value="Iniciar produção" class="producao" id="producao">
+                <button class="producao" id="producao" type="button">Iniciar produção</button>
             </form>
         </section>
     </main>
